Fixed editor font size on mobile devices

--- a/wcfsetup/install/files/style/form.less
+++ b/wcfsetup/install/files/style/form.less
@@ -534,7 +534,8 @@ select > option {
 	input[type="search"],
 	input[type="tel"],
 	input[type="color"],
-	.cke_editable {
+	.cke_editable,
+	.redactor-editor {
 		font-size: 16px;
 	}
 }
