--- a/wcfsetup/install/files/style/redactor.less
+++ b/wcfsetup/install/files/style/redactor.less
@@ -69,7 +69,6 @@
 }
 
 .redactor-editor {
-	font-size: 1rem;
 	max-height: 500px;
 	padding: 10px;
 	position: relative;
@@ -135,6 +134,10 @@
 			}
 		}
 	}
+}
+
+@media only screen and (min-width: 801px) {
+	font-size: 1rem;
 }
 
 .redactor-toolbar {
